--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
                     <img src="./img/Diapositiva2.JPG" alt="" class="img-galeria">
                     <img src="./img/Diapositiva5.JPG" alt="" class="img-galeria">
                     <img src="./img/Diapositiva6.JPG" alt="" class="img-galeria">
-                    <img src="./img/resultados2.jpg" alt="" class="img-galeria">
+                    <img src="./img/variables biologicas.jpg" alt="" class="img-galeria">
                     <img src="./img/Diapositiva10.JPG" alt="" class="img-galeria">
                 </div>
             </div>
@@ -657,6 +657,7 @@
                     <img src="./img/Diapositiva7.JPG" alt="" class="img-galeria">
                     <img src="./img/Diapositiva8.JPG" alt="" class="img-galeria">
                     <img src="./img/resultados.jpg" alt="" class="img-galeria">
+                    <img src="./img/cronograma.jpg" alt="" class="img-galeria">
                     
                 </div>
             </div>
